--- a/ShelterEvidency/Views/EconomyView.xaml
+++ b/ShelterEvidency/Views/EconomyView.xaml
@@ -4,11 +4,44 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <DockPanel>
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+
+            </Grid.ColumnDefinitions>
+            <Button x:Name="Costs" Grid.Column="0" Margin="5,2,5,-3">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <materialDesign:PackIcon Kind="CashMinus"  Width="25" Height="25"/>
+                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">Náklady útulku</TextBlock>
+                </StackPanel>
+            </Button>
+            <Button x:Name="Donations" Grid.Column="1" Margin="5,2,5,-3">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <materialDesign:PackIcon Kind="CashPlus"  Width="25" Height="25"/>
+                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">Sponzorské dary</TextBlock>
+                </StackPanel>
+            </Button>
+        </Grid>
+
+        <materialDesign:Card
+            materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="5,0" >
+            <ContentControl x:Name="ActiveItem"/>
+        </materialDesign:Card>
+
+    </DockPanel>
+
+    <!--
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -23,4 +56,6 @@
 
 
     </Grid>
+    
+    -->
 </UserControl>
